# milvus2tidb

./: README.md  docker-compose.yml  insert_milvus.py  inspect_milvus.py  migrate_milvus_to_tidb.py  pyproject.toml
