[project]
name = "milvus2tidb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "cryptography>=45.0.3",
    "dotenv>=0.9.9",
    "elasticsearch>=8.14.0",
    "grpcio==1.64.0",
    "grpcio-tools==1.64.0",
    "litellm>=1.71.1",
    "mysql-connector-python>=9.2.0",
    "openai>=1.97.1",
    "pandas>=2.2.3",
    "protobuf>=5.26.1",
    "pymilvus==2.5.10",
    "pymysql>=1.1.1",
    "pytidb>=0.0.6",
    "socksio>=1.0.0",
    "sqlmodel>=0.0.24",
    "streamlit>=1.45.1",
    "tqdm>=4.66.0",
]
